--- a/css/main.css
+++ b/css/main.css
@@ -67,9 +67,10 @@ body {
 
 #main-nav {
     grid-column: 1/-1;
+    
 }
 
-#main-nav lable img {
+#main-nav label img {
     width: 20px;
     height: 20px;
     transition: all .5s ease;
@@ -78,15 +79,144 @@ body {
     cursor: pointer;
 }
 
-#main-nav input {
+#main-nav input, #burger-con {
     display: none;
 }
 
+#main-nav input:checked ~ #burger-con {
+    display: block;
+}
+
+#main-nav input:checked ~ label img {
+    transform: rotate(90deg);
+}
+
+#main-nav ul{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+#main-nav li a{
+    display: block;
+    /*trbl*/
+    padding: 10px 0 10px 0;
+    text-align: center;
+    color: #626262;
+}
+
+#main-nav li{
+    border-bottom: 1px solid #efefef;
+}
+
+#main-nav li:first-child{
+    border-top: 1px solid #efefef;
+}
+
+#main-nav li:last-child{
+    margin-bottom: 10px;
+
+}
+
+#logo {
+    grid-column: 1/-1;
+}
 
 /* 4. ---Main Hero Image--- */
 
+#main-hero {
+    margin-top: 20px;
+}
 
+#main-hero img {
+    grid-column: 1/-1;
+    grid-row: 1/3;
+    /*Use negative margins sparingly*/
+    margin-left: -15px;
+    margin-right: -15px;
+}
 
+.book-now {
+    background-color: #9a2018;
+    color: #fff;
+    font-size: 16px;
+    grid-column: 3/-1;
+    grid-row: 1/2;
+    height: 67px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .5s ease;
+}
+
+.book-now:hover {
+    box-shadow: inset 0px -67px 0px 0px rgb(196, 28, 28);
+}
+
+.hero-img-h2, .hero-img-h3{
+    background-color: #fff;
+    /*TB LR*/
+    padding: 15px 15px;
+    font-size: 14px;
+    grid-column: 1/-1;
+    grid-row: 2/3;
+    align-self: end;
+}
+
+.hero-img-h2 span, .hero-img-h3 span {
+    color: #9a2018;
+    font-size: 12px;
+    margin-bottom: 10px;
+    line-height: 20px;
+}
+
+#hero-welcome {
+    font-size: 14px;
+    line-height: 22px;
+}
+
+#hero-welcome p {
+    grid-column: 1/-1;
+}
+
+#hero-welcome p:first-of-type {
+    border-top: solid 3px #cf6666;
+    padding-top: 20px;
+    margin-top: 15px;
+}
+
+#hero-contact {
+    font-size: 12px;
+    background: #efefef;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-top: 50px;
+}
+
+#contact-con div {
+    grid-column: span 4;
+}
+
+.fas {
+    font-size: 50px;
+    color: #9a2018;
+    float: left;
+}
+
+.fas-mobile-alt {
+    margin-left: 50px;
+    margin-right: 13px;
+    margin-bottom: 20px;
+}
+
+.fas-map-marker-alt {
+    margin-left: 47px;
+    margin-right: 10px;
+}
+
+#hero-contact a {
+    color: #9a2018;
+}
 
 /* 5. ---Why Couples Resort--- */
 
