--- a/css/main.css
+++ b/css/main.css
@@ -203,13 +203,13 @@ body {
     float: left;
 }
 
-.fas-mobile-alt {
+.fa-mobile-alt {
     margin-left: 50px;
     margin-right: 13px;
     margin-bottom: 20px;
 }
 
-.fas-map-marker-alt {
+.fa-map-marker-alt {
     margin-left: 47px;
     margin-right: 10px;
 }
