--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ input, textarea {
 }
 
 body {
-    margin: o;
+    margin: 0;
     padding: 0;
     color: #626262;
     font-family: 'Sanchez', 'Times New Roman', serif;
